<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/configure_username"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:hint="@string/configure_username_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/configure_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:hint="@string/configure_password_hint" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_use_location_label"
        android:id="@+id/configure_location"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_set"
        android:id="@+id/configure_continue"
        android:layout_marginTop="20dp" />
</LinearLayout>