<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/appwidget_dark_bg_clickable"
    android:visibility="visible">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:background="@drawable/appwidget_button_left"
                android:id="@+id/tab_status_container"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tab_hours_placeholder"
                    android:id="@+id/tab_hours"
                    android:textColor="#ffffff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tab_status_placeholder"
                    android:id="@+id/tab_status"
                    android:textSize="15sp"
                    android:textColor="#42a5f5"
                    android:visibility="visible" />

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tab_loader"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:indeterminate="true"
                android:indeterminateBehavior="cycle"
                android:indeterminateOnly="false"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab_punch_text"
                android:id="@+id/tab_punch"
                android:background="@drawable/appwidget_button_center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:visibility="visible" />

        </RelativeLayout>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="@string/tab_punch_text"
            android:id="@+id/tab_settings"
            android:src="@drawable/refresh"
            android:contentDescription="@string/tab_refresh_desc"
            android:background="@drawable/appwidget_button_right"
            android:scaleType="fitCenter" />
    </LinearLayout>
</FrameLayout>